RESOLVED FIXED208618
Fix for crash in AXIsolatedObject::fillChildrenVectorForProperty.
https://bugs.webkit.org/show_bug.cgi?id=208618
Summary Fix for crash in AXIsolatedObject::fillChildrenVectorForProperty.
Andres Gonzalez
Reported 2020-03-04 17:28:48 PST
Fix for crash in AXIsolatedObject::fillChildrenVectorForProperty.
Attachments
Patch (2.69 KB, patch)
2020-03-04 17:32 PST, Andres Gonzalez
no flags
Patch (2.69 KB, patch)
2020-03-04 17:45 PST, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-03-04 17:32:05 PST
chris fleizach
Comment 2 2020-03-04 17:38:04 PST
Comment on attachment 392519 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=392519&action=review > Source/WebCore/ChangeLog:9 > + doesn't do it.. Two periods
Andres Gonzalez
Comment 3 2020-03-04 17:45:18 PST
Andres Gonzalez
Comment 4 2020-03-04 17:46:51 PST
(In reply to chris fleizach from comment #2) > Comment on attachment 392519 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=392519&action=review > > > Source/WebCore/ChangeLog:9 > > + doesn't do it.. > > Two periods Fixed.
WebKit Commit Bot
Comment 5 2020-03-04 19:28:16 PST
Comment on attachment 392522 [details] Patch Clearing flags on attachment: 392522 Committed r257896: <https://trac.webkit.org/changeset/257896>
WebKit Commit Bot
Comment 6 2020-03-04 19:28:18 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2020-03-04 19:29:26 PST
Note You need to log in before you can comment on or make changes to this bug.