Fix for crash in AXIsolatedObject::fillChildrenVectorForProperty. https://bugs.webkit.org/show_bug.cgi?id=208618

Reviewed by Chris Fleizach.

Reserve capacity of WTF::Vector before using it since constructor
doesn't do it.

* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::fillChildrenVectorForProperty const):
* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::objectsForIDs const):


Canonical link: https://commits.webkit.org/221528@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257896 268f45cc-cd09-0410-ab3c-d52691b4dbfc